wrap margin elements (fix old android bug)

--- a/www/less/index.less
+++ b/www/less/index.less
@@ -446,6 +446,9 @@ body{
   margin-bottom: 24px;
 }
 
+.buttons, .about-content, .end-content{
+  overflow: hidden;
+}
 
 @media (max-width: 320px) {
   .logo-intro{
